# MCGT

./: .ci-out_cli_conform_after_fix_build_parser_v2.txt  .ci-out_cli_conform_after_fixes.txt  .ci-out_cli_conform_after_savefig_dryrun.txt  .ci-out_cli_conform_after_v1b_dryrun.txt  .ci-out_cli_conform_report.txt  .ci-out_cli_parser_name_fix_apply.txt  .ci-out_cli_parser_name_fix_dryrun.txt  .ci-out_end2end_fix_and_smoke.txt  .ci-out_end2end_glue_and_smoke.txt  .ci-out_fix_build_parser_v1_log.txt  .ci-out_mv_to_attic_dryrun.txt  .ci-out_patch_cli_v1_apply.txt  .ci-out_patch_cli_v1_dryrun.txt  .ci-out_patch_savefig_v1_dryrun.txt  .ci-out_patch_savefig_v1b_apply.txt  .ci-out_patch_savefig_v1b_dryrun.txt  .ci-out_smoke_v1_log.txt  .ci-out_smoke_v1_log_verbose_3.txt  .ci_poke  .editorconfig  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .last_run_id  .pre-commit-config.yaml  .pre-commit-config.yaml.bak.20251002T142116  .pre-commit-config.yaml.bak.20251002T142738  .pre-commit-config.yaml.bak.20251002T144841  .pre-commit-config.yaml.bak_20251005T021005Z  .pre-commit-config.yaml.dallidbsx_bak_20251005T012512Z  .pre-commit-config.yaml.psx_bak_20251005T003319Z  .pre-commit-config.yaml.psx_bak_20251005T014033Z  .ruff.toml  .zenodo.json  86605LOG  ASSETS_EXTRA_ALL.tsv  CERTIFICATE_OF_INTEGRITY.txt  CH01_ASSETS_EXTRA.tsv  CH02_ASSETS_EXTRA.tsv  (+335 more)
.bkp_pkgmeta_20251117T205507/: setup.cfg
.bkp_pkgmeta_20251117T214720/: pyproject.toml  setup.cfg
.ci/: heartbeat_20251101T134848Z.txt
.ci-archive/: ci-logs-20251001T153836.tgz  ci-logs-20251001T154554.tgz  tools-20251001T153844.tgz  tools-20251001T154604.tgz
.ci-config/: README.md  figures_orphans_allowlist.txt
.ci-helpers/: README.md
.ci-logs/: compile_failed_ctx.txt  failed_files.txt  figure_rename_report_20251003T202052Z.json  figure_rename_report_20251003T202103Z.json  figure_rename_report_20251004T160344Z.json
.ci-out/: _bundle_all_ciout.txt  apply_fig_renames.sh  ci_budgets_report.txt  ci_missing_setup_python.txt  ci_patch_plan.txt  figures_all.tsv  figures_bad_names.tsv  figures_bad_names.txt  figures_rename_plan.tsv  frontmatter_samples.txt  make_vars.tsv  makefiles.list.txt  makefiles.python_var.txt  manifest_publication.sha256sum.new  manifests_json_guard_report.txt  md_frontmatter_paths.txt  pyproject_presence.txt  python_consts.tsv  python_consts_modules.txt  scan_done.txt  scan_start.txt  workflows.list.txt
.ci_poke/: minify_59047.txt  poke_2025-09-29T20:43:54Z_16351.txt  poke_2025-09-29T22:38:02Z_7308.txt  poke_59593.txt  poke_59711.txt  poke_59731.txt  poke_build_61063.txt  poke_build_61503.txt  poke_build_61933.txt  poke_end2end_60384.txt  poke_rebuild_59848.txt  poke_rebuilt_59868.txt  poke_run_59506.txt  poke_run_60230.txt  poke_smoke_61063.txt  poke_smoke_61503.txt  poke_smoke_61933.txt  poke_stage1-smoke_60785.txt  poke_stage1_60537.txt  poke_stage2-build_60785.txt  poke_stage2_60537.txt  poke_write_clean_60012.txt  poke_write_clean_60214.txt  smoke_59324.txt
.githooks/: pre-commit
.github/: CODEOWNERS  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  _badges.md  assets_budget.yml  dependabot.yml  release-drafter.yml  semantic.yml
.venv-wheel-test/: pyvenv.cfg
01-introduction-applications/: 01_applications_calibration_conceptuel.tex  01_introduction_conceptuel.tex  CHAPTER01_GUIDE.txt  CHAPTER1_GUIDE.txt
02-validation-chronologique/: 02_validation_chronologique_conceptuel.tex  02_validation_chronologique_details.tex  CHAPTER02_GUIDE.txt  CHAPTER2_GUIDE.txt
03-stabilite-fR/: 03_stabilite_fR_conceptuel.tex  03_stabilite_fR_details.tex  CHAPTER03_GUIDE.txt  CHAPTER3_GUIDE.txt
04-invariants-adimensionnels/: 04_invariants_adimensionnels_conceptuel.tex  04_invariants_adimensionnels_details.tex  CHAPTER04_GUIDE.txt
05-nucleosynthese-primordiale/: 05_nucleosynthese_primordiale_conceptuel.tex  05_nucleosynthese_primordiale_details.tex  CHAPTER05_GUIDE.txt  CHAPTER5_GUIDE.txt
06-rayonnement-cmb/: 06_cmb_conceptuel.tex  06_cmb_details.tex  CHAPTER06_GUIDE.txt
07-perturbations-scalaires/: 07_perturbations_scalaires_conceptuel.tex  07_perturbations_scalaires_details.tex  CHAPTER07_GUIDE.txt
08-couplage-sombre/: CHAPTER08_GUIDE.txt  (+3 more)
(+4370 files in other folders)
