[build-system]
requires = ["setuptools>=77,<79", "wheel"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "zz-tools"
version = "0.3.0"
description = "MCGT utilities"
# DUPLICATE_DISABLED: readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["zz_tools*"]

[project.urls]
Homepage = "https://github.com/JeanPhilipLalumiere/MCGT"
Repository = "https://github.com/JeanPhilipLalumiere/MCGT"

[tool.setuptools]

# ci-nudge

