[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
license-files = ["LICENSE", "LICENSE-data"]
readme = "README.md"
name = "tools"
version = "2.6.0"
description = "MCGT utilities"
# DUPLICATE_DISABLED: readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
  "numpy<2.1",
  "matplotlib>=3.5.0",
  "pandas>=2.0",
  "scipy>=1.9.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcgt*", "tools*"]

[project.urls]
Homepage = "https://github.com/JeanPhilipLalumiere/MCGT"
Repository = "https://github.com/JeanPhilipLalumiere/MCGT"

[tool.ruff]
lint.ignore = ["E402", "E741", "F401", "F403", "F821", "F823", "F841"]

[tool.setuptools]
# ci-nudge

[tool.pytest.ini_options]
addopts = "-ra -q"
norecursedirs = [
  ".git",
  "build",
  "dist",
  "_attic_untracked",
  "_autofix_sandbox",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
  "slow: tests coûteux (désactivables via -m \"not slow\")",
  "schema: tests de validation de schémas",
  "manifest: tests de cohérence des manifests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.pycodestyle]
max-line-length = 100
ignore = [
  "E203",
  "W503",
]

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["mcgt"]
omit = [
  "*/__init__.py",
  "**/scripts/**",
  "**/.venv*/**",
  "**/venv*/**",
  "**/site-packages/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
precision = 1
skip_covered = true
